controller_board/esp_code/continuous_read/build/log/idf_py_stdout_output_19348
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd "/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/continuous_read/build/bootloader/esp-idf/esptool_py" && /home/marcus/.espressif/python_env/idf5.5_py3.12_env/bin/python /home/marcus/esp/esp-idf-v5.5/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /media/marcus/BCF853CFF8538714/Users/Marcus\ Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/continuous_read/build/bootloader/bootloader.bin
Bootloader binary size 0x5260 bytes. 0x2da0 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/continuous_read_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/continuous_read_main.c.obj 
/home/marcus/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/continuous_read/build/config" -I"/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/continuous_read/main" -I/home/marcus/esp/esp-idf-v5.5/components/newlib/platform_include -I/home/marcus/esp/esp-idf-v5.5/components/freertos/config/include -I/home/marcus/esp/esp-idf-v5.5/components/freertos/config/include/freertos -I/home/marcus/esp/esp-idf-v5.5/components/freertos/config/xtensa/include -I/home/marcus/esp/esp-idf-v5.5/components/freertos/FreeRTOS-Kernel/include -I/home/marcus/esp/esp-idf-v5.5/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/marcus/esp/esp-idf-v5.5/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/marcus/esp/esp-idf-v5.5/components/freertos/esp_additions/include -I/home/marcus/esp/esp-idf-v5.5/components/esp_hw_support/include -I/home/marcus/esp/esp-idf-v5.5/components/esp_hw_support/include/soc -I/home/marcus/esp/esp-idf-v5.5/components/esp_hw_support/include/soc/esp32s3 -I/home/marcus/esp/esp-idf-v5.5/components/esp_hw_support/dma/include -I/home/marcus/esp/esp-idf-v5.5/components/esp_hw_support/ldo/include -I/home/marcus/esp/esp-idf-v5.5/components/esp_hw_support/debug_probe/include -I/home/marcus/esp/esp-idf-v5.5/components/esp_hw_support/mspi_timing_tuning/include -I/home/marcus/esp/esp-idf-v5.5/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/marcus/esp/esp-idf-v5.5/components/esp_hw_support/power_supply/include -I/home/marcus/esp/esp-idf-v5.5/components/esp_hw_support/port/esp32s3/. -I/home/marcus/esp/esp-idf-v5.5/components/esp_hw_support/port/esp32s3/include -I/home/marcus/esp/esp-idf-v5.5/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -I/home/marcus/esp/esp-idf-v5.5/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -I/home/marcus/esp/esp-idf-v5.5/components/heap/include -I/home/marcus/esp/esp-idf-v5.5/components/heap/tlsf -I/home/marcus/esp/esp-idf-v5.5/components/log/include -I/home/marcus/esp/esp-idf-v5.5/components/soc/include -I/home/marcus/esp/esp-idf-v5.5/components/soc/esp32s3 -I/home/marcus/esp/esp-idf-v5.5/components/soc/esp32s3/include -I/home/marcus/esp/esp-idf-v5.5/components/soc/esp32s3/register -I/home/marcus/esp/esp-idf-v5.5/components/hal/platform_port/include -I/home/marcus/esp/esp-idf-v5.5/components/hal/esp32s3/include -I/home/marcus/esp/esp-idf-v5.5/components/hal/include -I/home/marcus/esp/esp-idf-v5.5/components/esp_rom/include -I/home/marcus/esp/esp-idf-v5.5/components/esp_rom/esp32s3/include -I/home/marcus/esp/esp-idf-v5.5/components/esp_rom/esp32s3/include/esp32s3 -I/home/marcus/esp/esp-idf-v5.5/components/esp_rom/esp32s3 -I/home/marcus/esp/esp-idf-v5.5/components/esp_common/include -I/home/marcus/esp/esp-idf-v5.5/components/esp_system/include -I/home/marcus/esp/esp-idf-v5.5/components/esp_system/port/soc -I/home/marcus/esp/esp-idf-v5.5/components/esp_system/port/include/private -I/home/marcus/esp/esp-idf-v5.5/components/xtensa/esp32s3/include -I/home/marcus/esp/esp-idf-v5.5/components/xtensa/include -I/home/marcus/esp/esp-idf-v5.5/components/xtensa/deprecated_include -I/home/marcus/esp/esp-idf-v5.5/components/esp_adc/include -I/home/marcus/esp/esp-idf-v5.5/components/esp_adc/interface -I/home/marcus/esp/esp-idf-v5.5/components/esp_adc/esp32s3/include -I/home/marcus/esp/esp-idf-v5.5/components/esp_adc/deprecated/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap "-fmacro-prefix-map=/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/continuous_read=." -fmacro-prefix-map=/home/marcus/esp/esp-idf-v5.5=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/continuous_read_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/continuous_read_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/continuous_read_main.c.obj -c '/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/continuous_read/main/continuous_read_main.c'
/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/continuous_read/main/continuous_read_main.c: In function 'app_main':
/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/continuous_read/main/continuous_read_main.c:123:74: error: 'i' undeclared (first use in this function)
  123 |             adc_digi_output_data_t *p = (adc_digi_output_data_t*)&result[i];
      |                                                                          ^
/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/continuous_read/main/continuous_read_main.c:123:74: note: each undeclared identifier is reported only once for each function it appears in
/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/continuous_read/main/continuous_read_main.c:29:54: error: invalid type argument of '->' (have 'int')
   29 | #define EXAMPLE_ADC_GET_CHANNEL(p_data)     ((p_data)->type2.channel)
      |                                                      ^~
/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/continuous_read/main/continuous_read_main.c:124:32: note: in expansion of macro 'EXAMPLE_ADC_GET_CHANNEL'
  124 |             int32_t chan_num = EXAMPLE_ADC_GET_CHANNEL(3);
      |                                ^~~~~~~~~~~~~~~~~~~~~~~
/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/continuous_read/main/continuous_read_main.c:30:54: error: invalid type argument of '->' (have 'int')
   30 | #define EXAMPLE_ADC_GET_DATA(p_data)        ((p_data)->type2.data)
      |                                                      ^~
/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/continuous_read/main/continuous_read_main.c:125:29: note: in expansion of macro 'EXAMPLE_ADC_GET_DATA'
  125 |             uint32_t data = EXAMPLE_ADC_GET_DATA(1);
      |                             ^~~~~~~~~~~~~~~~~~~~
/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/continuous_read/main/continuous_read_main.c:123:37: warning: unused variable 'p' [-Wunused-variable]
  123 |             adc_digi_output_data_t *p = (adc_digi_output_data_t*)&result[i];
      |                                     ^
/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/continuous_read/main/continuous_read_main.c:117:14: warning: unused variable 'unit' [-Wunused-variable]
  117 |         char unit[] = EXAMPLE_ADC_UNIT_STR(EXAMPLE_ADC_UNIT);
      |              ^~~~
/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/continuous_read/main/continuous_read_main.c:163:1: error: expected declaration or statement at end of input
  163 | }
      | ^
/media/marcus/BCF853CFF8538714/Users/Marcus Meyer/Desktop/enel_300/ENEL-300/controller_board/esp_code/continuous_read/main/continuous_read_main.c:89:15: warning: variable 'ret' set but not used [-Wunused-but-set-variable]
   89 |     esp_err_t ret;
      |               ^~~
[4/9] Completed 'bootloader'
ninja: build stopped: subcommand failed.
